--- a/indexpage/template.html
+++ b/indexpage/template.html
@@ -4,6 +4,7 @@
   <title>{title}</title>
   <meta http-equiv="content-type" content="text/html; charset=utf-8" />
   <link rel="stylesheet" href="./indexpage/indexpage.css" />
+  <link rel="icon" href="./indexpage/favicon.ico" />
 </head>
 <body>
  {preface}
