Add fields for usernames whose answers will be shown

--- a/indexpage/template.html
+++ b/indexpage/template.html
@@ -11,5 +11,6 @@
  {questions}
  {appendix}
   <script src="./indexpage/spoiler.js"></script>
+  <script src="./indexpage/userform.js"></script>
 </body>
 </html>
