Replace in-line event variable with handler initialized from JS - event arg was marked as deprecated

--- a/indexpage/template.html
+++ b/indexpage/template.html
@@ -12,5 +12,6 @@
  {appendix}
   <script src="./indexpage/spoiler.js"></script>
   <script src="./indexpage/userform.js"></script>
+  <script>initClickHandlerOnUserFields();</script>
 </body>
 </html>
